<?xml version="1.0" encoding="utf-8"?>
<com.gc.materialdesign.views.ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!-- 图标 -->
        <ImageView
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- 注册用户名 -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"

            android:hint="@string/signup_username"
            android:textSize="14sp"
            android:inputType="text"
            app:met_baseColor="#000000"
            app:met_minCharacters="4"
            app:met_clearButton="true"

            app:met_errorColor="@color/colorRed"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#1E90FF"/>

        <!-- 注册邮箱 -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"

            android:hint="@string/signup_email"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            app:met_baseColor="#000000"
            app:met_clearButton="true"

            app:met_errorColor="@color/colorRed"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#1E90FF"/>

        <!-- 注册密码输入 -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"

            android:hint="@string/signup_pwd"
            android:textSize="14sp"
            android:inputType="textPassword"
            app:met_baseColor="#000000"
            app:met_minCharacters="6"
            app:met_maxCharacters="16"
            app:met_clearButton="true"

            app:met_errorColor="@color/colorRed"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#1E90FF"/>

        <!-- 确认注册密码 -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_signup_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"

            android:hint="@string/signup_pwd_check"
            android:textSize="14sp"
            android:inputType="textPassword"
            app:met_baseColor="#000000"
            app:met_minCharacters="6"
            app:met_maxCharacters="16"
            app:met_clearButton="true"

            app:met_errorColor="@color/colorRed"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#1E90FF"/>

        <!-- 注册按钮 -->
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="#1E90FF"
            android:textSize="12sp"
            android:text="@string/button_signup"/>

        <!-- 登录 -->
        <TextView
            android:id="@+id/link_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/link_login"
            android:textSize="12sp" />

    </LinearLayout>
</com.gc.materialdesign.views.ScrollView>