<?xml version="1.0" encoding="utf-8"?>
<com.gc.materialdesign.views.ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!-- 图标 -->
        <ImageView
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- 登录邮箱输入 -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"

            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            app:met_baseColor="#000000"
            app:met_clearButton="true"

            app:met_errorColor="@color/colorRed"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorDoderBlue" />

        <!-- 登录密码输入 -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/input_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"

            android:hint="@string/login_pwd"
            android:inputType="textPassword"
            android:textSize="18sp"
            app:met_baseColor="#000000"
            app:met_minCharacters="6"
            app:met_maxCharacters="16"
            app:met_clearButton="true"

            app:met_errorColor="@color/colorRed"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorDoderBlue" />

        <!-- 登录按钮 -->
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@color/colorDoderBlue"
            android:textSize="12sp"
            android:text="@string/button_login"/>

        <!-- 注册 -->
        <TextView
            android:id="@+id/link_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/link_signup"
            android:textSize="12sp" />

    </LinearLayout>
</com.gc.materialdesign.views.ScrollView>